...
            "transactionerror2": "We're unable to complete your transaction. Please close and reopen our app and try again.",
            "lightningconfirmation": "Are you sure you want to pay <amount> satoshis (<currency> <convertedamount>)?\n\nThis payment may incur fees of up to <fees> satoshis.",
            "paymentsuccessful": "Payment successful",
            "paymentfailed": "Payment failed",
            "paymentfailed2": "Your Lightning payment didn't go through.<reason>\n\nLightning payments can fail when the receiver is offline or doesn't have the app open, when their wallet doesn't have enough receiving capacity, when there's no affordable route through the network, or when the invoice has expired. Try again later or ask the receiver to open their app.",
            "paymentfailed3": "Unable to send bitcoin payment. Please sync your wallet and try again.",
            "buybitcoin": "buy bitcoin",
            "buysubtitle": "To buy bitcoin, make a bank transfer to a partner and put your unique code in the transfer description field.",
            "buyempty": "No order has been set up. Tap below to create your first one.",
            "addanother": "add another",
            "youremail": "Your email",
            "youriban": "Your IBAN",
            "ouriban": "Partner IBAN",
...
            "syncingwallet3": "syncing wallet",
            "syncingwallet2": "Please wait a moment while we're syncing your wallet.",
            "resendcode2": "Please wait 30 seconds before requesting another verification code.",
            "changeemail": "Change email",
            "conversionfail": "We're experiencing an issue fetching the latest conversion rates. Temporarily, our calculations - if available - won't reflect bitcoin's current value.",
            "unconfirmed": "Unconfirmed",
            "save": "Save",
            "lightningchannelfees": "lightning connection fees",
            "lightningchannelfees2": "This is your first instant bitcoin transaction.\n\nTo enable instant payments, we need to reserve funds in a lightning connection for you.\n\nThis fee covers both the capital we reserve (so you can make instant transactions) and the bitcoin network fees for opening and closing the connection.\n\nAll future instant bitcoin purchases will be completely free of n
            "copy": "Copy",
            "cachedimages1": "Are you sure you want to remove your cached images?",
            "remove": "Remove",
            "cacheemptied": "Cache emptied",
...
